# Wuyu

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.notes/: README.md  claude-code-remote.md  dartssh2.md  dev-environment.md  mobile-stack-decision.md  protocol-rpc-methods.md  research-codex-protocol-mobile-stack.md  slash-commands.md  ssh-transport.md
docs/superpowers/plans/: 2026-03-17-m2-thread-list.md
docs/superpowers/specs/: 2026-03-17-m2-thread-list-design.md
src/wuyu/: __init__.py  codec.py  session.py  ssh_transport.py  transport.py
src/wuyu/protocol/: __init__.py  _util.py  approvals.py  events.py  items.py  jsonrpc.py  types.py
tests/: test_approvals.py  test_codec.py  test_events.py  test_items.py  test_protocol_types.py  test_session.py  test_ssh_transport.py
wuyu_app/: README.md  pubspec.yaml
wuyu_app/android/app/: build.gradle.kts
wuyu_app/ios/Runner/: Info.plist
wuyu_app/ios/Runner.xcodeproj/: project.pbxproj
wuyu_app/lib/: dev_connect_screen.dart  main.dart
wuyu_app/lib/codex/: agent_message_accumulator.dart  app_server_service.dart  chat_screen.dart  codex_detector.dart  events.dart  thread_list_screen.dart  thread_service.dart
wuyu_app/lib/ssh/: flutter_secure_kv.dart  host_key_store.dart  remote_runner.dart  secure_kv.dart  (+2 more)
wuyu_app/test/: widget_test.dart
wuyu_dart/: pubspec.yaml
wuyu_dart/lib/: wuyu_dart.dart
wuyu_dart/test/: codec_test.dart  session_test.dart  ssh_transport_test.dart  transport_test.dart
(+18 files in other folders)
