[project]
name = "wuyu"
version = "0.1.0"
description = "Mobile SSH control app for agentic coding CLIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.22.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/wuyu"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
